	(twittering-http-get): use
	`twittering-add-application-header-to-http-request' instead of
	`twittering-http-application-headers-with-auth'.
	(twittering-http-post): likewise.

	* twittering-mode.el: Fix `twittering-buffer-related-p' in order
	to support multiple edit buffers.
	(twittering-buffer-related-p): fix a condition so that it works
	well even when multiple edit buffer exists.

2010-09-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Remove redundant pre-processing of HTTP
	response buffer for SSL via a proxy.
	(twittering-oauth-get-response-alist): remove redundant
	pre-processing of HTTP response buffer for SSL via proxy. Instead
	of it, `twittering-oauth-get-token-alist' invokes an appropriate
	function for pre-processing.

	* twittering-mode.el: Correct schemes of URIs used in OAuth/xAuth
	procedures.
	(twittering-oauth-request-token-url): removed.
	(twittering-oauth-authorization-url-base): removed.
	(twittering-oauth-access-token-url): removed.
	(twittering-oauth-request-token-url-without-scheme): new variable.
	(twittering-oauth-authorization-url-base-without-scheme): new
	variable.
	(twittering-oauth-access-token-url-without-scheme): new variable.
	(twittering-oauth-get-token-alist): refer to the scheme of the
	given URI instead of `twittering-oauth-use-ssl'.
	(twittering-verify-credentials): make a URI with correct scheme
	for OAuth or xAuth procedure. The scheme is determined by
	`twittering-oauth-use-ssl'.

	* twittering-mode.el: A HTTP request alist is included in the
	connection info for the request.
	(twittering-oauth-get-token-alist): add an HTTP request alist into
	`connection-info'.
	(twittering-send-http-request-curl): extract the HTTP request
	alist from `connection-info' instead of an argument.
	(twittering-send-http-request-wget): likewise.
	(twittering-send-http-request-native): likewise.
	(twittering-make-connection-info): generate connection info
	according to an arugment `request'.